--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,8 @@ node_modules
 dist
 dist-ssr
 *.local
-.env
-.env.development
+# .env
+# .env.development
 
 # Editor directories and files
 .vscode/*
